--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Flip the Inside and Outside of Segments on a Single-Dimensional Integer Line",
   "main": "segflip.js",
+  "files": [
+    "segflip.js"
+  ],
   "scripts": {
     "format": "npx prettier --arrow-parens=avoid --print-width=120 --trailing-comma=none --write *.js",
     "test": "node test.js"
